--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-switch": "^7.0.0",
     "swr": "^2.2.5",
     "use-debounce": "^10.0.3"
