--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.3.0",
     "react-responsive-carousel": "^3.2.23",
     "react-switch": "^7.0.0",
+    "recharts": "^2.13.0",
     "swr": "^2.2.5",
     "use-debounce": "^10.0.3"
   },
